# memecry

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  alembic.ini  dev.Dockerfile  example.env  justfile  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test.pyi  time_posts_rendering.py  todo.md  viewrender.py
.github/workflows/: lint.yaml
app/: globals.css  layout.tsx  page.tsx
app/api/comments/: route.ts
app/api/memes/: route.ts
app/api/users/: route.ts
app/sign-in/[[...sign-in]]/: page.tsx
app/sign-up/[[...sign-up]]/: page.tsx
components/: CommentForm.tsx  CommentTree.tsx  CreateMemeForm.tsx  Navbar.tsx  TagFilter.tsx  UserProfile.tsx  UsernameDialog.tsx
lib/: html.py  supabase.js  supabase.ts  update-meme-images.js  update-meme-images.ts
memecry/: altair.py  bootstrap.py  config.py  depends.py  main.py  model.py  posts_service.py  schema.py  security.py  types.py  user_service.py
memecry/alembic/: env.py  script.py.mako
memecry/alembic/versions/: 103e638cc33e_add_score_column_to_posts_table.py  fbcf0920dd16_add_score_column_to_posts_table.py
memecry/alembic_migrations/: env.py
memecry/alembic_migrations/versions/: 5c13acb87365_add_user_options.py  9af368c9ecdc_.py  fbcf0920dd16_add_score_column_to_posts_table.py
memecry/routes/: auth.py  misc.py  post.py
memecry/views/: common.py  misc.py  post.py  user.py
scripts/: lint.sh  mass_upload.py
src/: comment_service.py  config.py  db.py  deps.py  index_service.py  main.py  models.py  posting_service.py  schema.py  security.py  user_service.py  viewrender.py
src/memecry/: __init__.py
src/templates/: comment.html  comment_form.html  comment_tree.html  login.html  main.html  me.html  only_post.html  post.html  post_comment.html  post_page.html  posts_partial.html  reactions.html  root.py  signup.html  top.html  upload.html
src/views/: common.py  posts.py  posts_yahgl.py  root.py  yahgl_common.py
static/css/: global.css  tailwind.css
static/js/: close_modals.js  constants.js  key_handler.js
tests/integration/bootstrap/: test.py
tests/integration/models/: test_reactions.py
