[project]
name = "memecry"
version = "0.1.0"
description = "Meme stuff"
authors = [
    { name = "crpier42", email = "crpier42@gmail.com" }
]
dependencies = [
    "loguru>=0.7.2",
    "uvicorn>=0.27.1",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "passlib>=1.7.4",
    "babel>=2.14.0",
    "gunicorn>=21.2.0",
    "sqlite-fts4>=1.0.3",
    "types-pillow>=10.2.0.20240213",
    "types-aiofiles>=23.2.0.20240106",
    "types-passlib>=1.7.7.20240106",
    "types-python-jose>=3.3.4.20240106",
    "starlette>=0.37.1",
    "sqlalchemy>=2.0.27",
    "aiosqlite>=0.20.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.2.1",
    "pendulum>=3.0.0",
    "icecream>=2.1.3",
    "pytailwindcss>=0.2.0",
    "alembic>=1.13.1",
    "python-jose>=3.3.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
hello = "memecry:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "pydeps>=1.12.18",
    "pre-commit>=3.6.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# try changing to memecry
packages = ["src/memecry"]
