[tool.poetry]
name = "memecry"
version = "0.1.1"
description = ""
authors = ["crpier <crpier42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
babel = "^2.11.0"
gunicorn = "^21.2.0"
sqlite-fts4 = "^1.0.3"
types-pillow = "^10.1.0.0"
types-aiofiles = "^23.1.0.2"
types-python-jose = "^3.3.4.7"
types-passlib = "^1.7.7.12"
starlette = "^0.31.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
aiosqlite = "^0.19.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
relax-py = "0.0.8"
pendulum = "3.0.0b1"
loguru = "^0.7.2"
icecream = "^2.1.3"
result = "^0.13.1"
pytailwindcss = "^0.2.0"
alembic = "^1.13.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
ruff = "^0.1.1"
pydeps = "^1.12.8"
python-dotenv = {extras = ["cli"], version = "^1.0.0"}
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["F", "E", "W", "C90", "I", "N", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "RUF"]
ignore = [
"ANN101", # No need for type annotation on `self`
"A002", # Allow me to use the "id" field
"A003", # Allow me to use the "id" field
"COM812",
"ISC001",
"PGH003",
]
[tool.ruff.extend-per-file-ignores]
"memecry/model.py" = ["TCH003"] # don't make me move imports into a type checking block as they are used by sqlalchemy

[tool.isort]
profile = "black"

[tool.mypy]
disable_error_code = ["type-abstract"]

[[tool.mypy.overrides]]
module = ["icecream", "sqlite_fts4"]
ignore_missing_imports = "true"

# TODO: add scripts for some common ops:
# poetry cache clear PyPI --all
# dotenv run uvicorn memecry.main:app --reload
